@@ -25,25 +25,25 @@ void	 _EXFUN(__fpurge,(FILE *));
 
 #ifdef  __GNUC__
 
-_ELIDABLE_INLINE inline size_t
+_ELIDABLE_INLINE size_t
 __fbufsize (FILE *__fp) { return (size_t) __fp->_bf._size; }
 
-_ELIDABLE_INLINE inline int
+_ELIDABLE_INLINE int
 __freading (FILE *__fp) { return (__fp->_flags & __SRD) != 0; }
 
-_ELIDABLE_INLINE inline int
+_ELIDABLE_INLINE int
 __fwriting (FILE *__fp) { return (__fp->_flags & __SWR) != 0; }
 
-_ELIDABLE_INLINE inline int
+_ELIDABLE_INLINE int
 __freadable (FILE *__fp) { return (__fp->_flags & (__SRD | __SRW)) != 0; }
 
-_ELIDABLE_INLINE inline int
+_ELIDABLE_INLINE int
 __fwriteable (FILE *__fp) { return (__fp->_flags & (__SWR | __SRW)) != 0; }
 
-_ELIDABLE_INLINE inline int
+_ELIDABLE_INLINE int
 __flbf (FILE *__fp) { return (__fp->_flags & __SLBF) != 0; }
 
-_ELIDABLE_INLINE inline size_t
+_ELIDABLE_INLINE size_t
 __fpending (FILE *__fp) { return __fp->_p - __fp->_bf._base; }
 
 #else
