@@ -1,3 +1,7 @@
+2014-12-04  Corinna Vinschen  <vinschen@redhat.com>
+
+	* libc/include/stdio_ext.h: Remove excess "inline".
+
 2014-12-10  Richard Earnshaw  <rearnsha@arm.com>
 
 	* libc/machine/aarch64/strchrnul.S (vrepmask): Use a call-clobbered
